--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -10,7 +10,6 @@
     android:paddingLeft="30dp"
     android:paddingRight="30dp"
     tools:context=".ui.cart.CartActivity">
-
     <TextView
         android:id="@+id/titleCart"
         android:layout_width="match_parent"
@@ -23,9 +22,18 @@
         android:textColor="@color/fontTitle"
         android:textSize="30sp"
         android:textStyle="bold"
-    />
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listhistory"
+        />
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listhistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+
 </LinearLayout>
