--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -4,49 +4,64 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_margin="16dp"
-        android:onClick="ClickLogo"
-        android:src="@drawable/ic_coffetime" />
+    <LinearLayout
 
-    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Android Coding"
-        android:textAlignment="center"
-        android:textColor="#636363"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_height="222dp"
+        android:background="@drawable/bg_color"
+        android:orientation="vertical">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="#636363" />
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:onClick="ClickLogo"
+            android:src="@drawable/ic_coffetime" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/txtUsuarioBar"
+            android:textAlignment="center"
+            android:textColor="#636363"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/txtCorreo"
+            android:textAlignment="center"
+            android:textColor="@color/fontSecondary"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:onClick="ClickHome"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:text="Home" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_home" />
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_newhome" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:text="La Carta" />
 
     </LinearLayout>
 
@@ -55,21 +70,23 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:onClick="ClickCart"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:text="Cart" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_baseline_dashboard_24" />
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_shopping_cart" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:text="Carrito de Compra" />
 
     </LinearLayout>
 
@@ -78,21 +95,23 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:onClick="ClickProfile"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:text="Profile" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_baseline_dashboard_24" />
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_assignment_ind" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:text="Perfil del Usuario" />
 
     </LinearLayout>
 
@@ -102,21 +121,23 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:onClick="ClickHistory"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:text="History" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_about_us" />
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_history" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:text="Historial de Ventas" />
 
     </LinearLayout>
 
@@ -125,23 +146,56 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:onClick="ClickLogout"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_weight="1"
-            android:padding="12dp"
-            android:text="Logout" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_logout" />
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_lock" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:textColor="@color/black"
+            android:text="Cerrar Sesión" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:onClick="ClickExit"
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="5dp"
+            android:src="@drawable/ic_exit" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="12dp"
+            android:text="Salir"
+            android:textColor="@color/black"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_marginTop="70dp"
+        android:src="@drawable/ic_splashscreen" />
 
 </LinearLayout>
 
