--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,8 +13,8 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
-    <color name="primary">#FCB302</color>
-    <color name="primary1">#F1AB01</color>
+    <color name="primary">#F1AB01</color>
+    <color name="primary1">#FC9D02</color>
     <color name="secondary">#F43127</color>
     <color name="fontPrimary">#0C1423</color>
     <color name="fontSecondary">#858990</color>
