--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/ic_newhome" />
+            android:src="@drawable/ic_home" />
 
         <TextView
             android:layout_width="0dp"
