--- a/app/src/main/res/layout/main_nav_drawer.xml
+++ b/app/src/main/res/layout/main_nav_drawer.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <LinearLayout
@@ -10,16 +11,26 @@
         android:layout_height="222dp"
         android:background="@drawable/bg_color"
         android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="100dp"
+            android:layout_gravity="center_horizontal"
+            >
+            <ImageView
+                android:id="@+id/drawerPhoto"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
+                android:layout_gravity="center"
+                android:onClick="ClickLogo"
+                android:src="@drawable/ic_coffetime" />
+        </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:onClick="ClickLogo"
-            android:src="@drawable/ic_coffetime" />
+
 
         <TextView
+            android:id="@+id/drawerId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtUsuarioBar"
@@ -29,6 +40,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/drawerEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/txtCorreo"
