--- a/app/src/main/res/layout/activity_user_qr_activity.xml
+++ b/app/src/main/res/layout/activity_user_qr_activity.xml
@@ -41,11 +41,20 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp">
 
-                    <ImageView
-                        android:id="@+id/profileQR_"
-                        android:layout_width="80dp"
-                        android:layout_height="70dp"
-                        android:layout_gravity="center_horizontal" />
+                    <androidx.cardview.widget.CardView
+
+                        android:layout_marginBottom="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:cardCornerRadius="100dp"
+                        android:layout_gravity="center_horizontal"
+                        >
+                        <ImageView
+                            android:id="@+id/profileQR_"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center_horizontal" />
+                    </androidx.cardview.widget.CardView>
 
                     <TextView
                         android:id="@+id/txtNameQr_"
