--- a/app/src/main/res/layout/product_history_element.xml
+++ b/app/src/main/res/layout/product_history_element.xml
@@ -62,7 +62,7 @@
                     android:textSize="19dp" />
 
                 <TextView
-                    android:id="@+id/fechaPedido_"
+                    android:id="@+id/stateSale_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -91,6 +91,32 @@
 
                 <TextView
                     android:id="@+id/cantidad_"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:textAlignment="textEnd"
+                    android:layout_weight="1"
+                    android:text="12"
+                    android:textSize="19dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                >
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:text="Fecha :"
+                    android:textSize="19dp" />
+
+                <TextView
+                    android:id="@+id/date_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
