--- a/app/src/main/res/layout/product_history_element.xml
+++ b/app/src/main/res/layout/product_history_element.xml
@@ -17,62 +17,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="20dp"
+            android:padding="10dp"
             android:orientation="vertical">
-            <LinearLayout
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="1dp"
-                >
+                android:text="Pedido"
+                android:textColor="@color/black"
+                android:fontFamily="@font/grotesk_medium"
+                android:textAlignment="textStart"
+                android:textSize="20dp"
+                />
 
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_weight="1"
-                    android:text="N° Pedido :"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/nPedido_"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="2dp"
-                    android:layout_weight="1"
-                    android:textAlignment="textEnd"
-                    android:text="UID1213-12313"
-                    android:textSize="18sp" />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="1dp"
-                >
-
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="3dp"
-                    android:layout_weight="1"
-                    android:text="Estado :"
-                    android:textSize="19dp" />
-
-                <TextView
-                    android:id="@+id/stateSale_"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="3dp"
-                    android:layout_weight="1"
-                    android:textAlignment="textEnd"
-                    android:fontFamily="@font/grotesk_medium"
-                    android:text="01/09/2021"
-                    android:textSize="19dp" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -86,11 +43,11 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:layout_weight="1"
-                    android:text="Cantidad :"
-                    android:textSize="19dp" />
+                    android:text="Fecha :"
+                    android:textSize="16dp" />
 
                 <TextView
-                    android:id="@+id/cantidad_"
+                    android:id="@+id/date_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -112,11 +69,38 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:layout_weight="1"
-                    android:text="Fecha :"
-                    android:textSize="19dp" />
+                    android:text="Estado :"
+                    android:textSize="16dp" />
 
                 <TextView
-                    android:id="@+id/date_"
+                    android:id="@+id/stateSale_"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:textAlignment="textEnd"
+                    android:fontFamily="@font/grotesk_medium"
+                    android:text="01/09/2021"
+                    android:textSize="19dp" />
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                >
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:text="Cantidad :"
+                    android:textSize="16dp" />
+
+                <TextView
+                    android:id="@+id/cantidad_"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
@@ -140,7 +124,7 @@
                     android:layout_margin="3dp"
                     android:layout_weight="1"
                     android:text="Total :"
-                    android:textSize="19dp" />
+                    android:textSize="16dp" />
 
                 <TextView
                     android:id="@+id/total_"
@@ -151,6 +135,33 @@
                     android:layout_weight="1"
                     android:text="S/.12.10"
                     android:textSize="19dp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="1dp"
+                >
+
+                <TextView
+
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:text="ID "
+                    android:layout_marginRight="10dp"
+                    android:textColor="@android:color/black"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/nPedido_"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_weight="1"
+                    android:text="UID1213-12313"
+                    android:textSize="18sp" />
             </LinearLayout>
 
         </LinearLayout>
