--- a/app/src/main/res/layout/product_element.xml
+++ b/app/src/main/res/layout/product_element.xml
@@ -27,7 +27,7 @@
 
             <TextView
                 android:id="@+id/name_"
-                android:layout_width="match_parent"
+                android:layout_width="290dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:text="Codelia"
@@ -54,6 +54,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
 
+                <!--
                 <TextView
                     android:id="@+id/stock_"
                     android:layout_width="match_parent"
@@ -69,6 +70,7 @@
                     android:layout_margin="3dp"
                     android:text="Francia"
                     android:textSize="19dp" />
+                -->
 
                 <TextView
                     android:id="@+id/price_"
@@ -76,6 +78,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="3dp"
                     android:text="Francia"
+                    android:gravity="center"
                     android:textSize="19dp" />
             </LinearLayout>
 
