--- a/app/src/main/res/layout/product_history_element.xml
+++ b/app/src/main/res/layout/product_history_element.xml
@@ -9,7 +9,7 @@
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="365dp"
         android:layout_height="wrap_content"
         android:padding="20dp"
         android:orientation="horizontal">
@@ -29,7 +29,6 @@
                 android:textAlignment="textStart"
                 android:textSize="20dp"
                 />
-
 
             <LinearLayout
                 android:layout_width="match_parent"
