--- a/app/src/main/res/layout/activity_product_admin.xml
+++ b/app/src/main/res/layout/activity_product_admin.xml
@@ -38,7 +38,7 @@
         android:ems="10"
         android:hint="Producto"
         android:inputType="textPersonName" />
-
+    <!--
     <EditText
         android:id="@+id/category_"
         android:layout_width="match_parent"
@@ -47,6 +47,12 @@
         android:ems="10"
         android:hint="Categoria"
         android:inputType="number" />
+        -->
+
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <EditText
         android:id="@+id/stock_"
@@ -145,6 +151,7 @@
             android:textSize="16dp"
             app:cornerRadius="20dp" />
     </LinearLayout>
+
 
 
 </LinearLayout>
