--- a/app/src/main/res/layout/activity_product_admin.xml
+++ b/app/src/main/res/layout/activity_product_admin.xml
@@ -50,7 +50,7 @@
         -->
 
     <Spinner
-        android:id="@+id/spinner1"
+        android:id="@+id/spinner_"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
